# ros_protobuf_msg

./: .gitignore  CMakeLists.txt  README.md  devel  listener.cpp  package.xml  pb_listener.cpp  pb_talker.cpp  talker.cpp
docker/scripts/: ros_docker_into.sh  ros_docker_run.sh
docs/examples/: download_data.ipynb
message_serialization/: CMakeLists.txt
message_serialization/include/ros/: serialization.h  serialization_protobuffer.h
message_traits/: CMakeLists.txt
message_traits/include/ros/: protobuffer_traits.h
roscpp/include/ros/: publisher.h
roscpp/src/libros/: publisher.cpp
sample_protos/: CMakeLists.txt  publish_info.proto
test/: CMakeLists.txt  sfinae_test.cc  sfinae_test.h  test_proto.cpp  test_template.cc  test_template.h
test/proto/: CMakeLists.txt  superbai.proto
